--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "dev": "tsc",
     "build": "tsc",
-    "lint": "eslint . --ext .ts",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.13",
+    "eslint": "^9.12.0",
+    "globals": "^15.11.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.8.1"
   }
 }
